hover over results to switch views between left and right

--- a/asset/imcomp/index.html
+++ b/asset/imcomp/index.html
@@ -90,6 +90,7 @@
     <span id="results_tabs_toggle" class="results_tab">Toggle</span>
     <span id="results_tabs_fade" class="results_tab">Fade</span>
     <span id="results_tabs_slide" class="results_tab">Slide</span>
+    <span id="results_tabs_hover" class="results_tab">Hover</span>
   </div>
 
   <!-- tools specific to the tabs above -->
@@ -108,8 +109,9 @@
       <label for="right_content_toggle">Comp</label>
     </div>
     <div class="slide_controls">
-      <label for="left_content_zoom">Slide Value</label>
+      <label for="base_comp_fader">Left</label>
       <input id="base_comp_fader" type="range" min="1" max="100" value="50" class="base_comp_fader">
+      <label for="base_comp_fader">Right</label>
     </div>
   </div>
 
