--- a/asset/imcomp/index.html
+++ b/asset/imcomp/index.html
@@ -17,36 +17,79 @@
   <button id="step3_button" class="step3_button_color panel_selector_button" onclick="_imcomp_set_panel('step3')">3. Compare and Visualize Results</button>
 </div> -->
 
+<svg style="display:none;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <defs>
+    <symbol id="icon_zoomin">
+      <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+      <path d="M12 10h-2v2H9v-2H7V9h2V7h1v2h2v1z"/>
+    </symbol>
+    <symbol id="icon_save">
+        <path d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"></path>
+    </symbol>
+    <symbol id="icon_close">
+      <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
+    </symbol>
+    <symbol id="icon_back">
+      <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path>
+    </symbol>
+    <symbol id="icon_forward">
+      <path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"></path>
+    </symbol>
+    <symbol id="icon_home">
+      <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"></path>
+    </symbol>
+
+  </defs>
+</svg>
+
 <div class="top_panel">
   <div class="top_right" id="top_right">
-    <div class="zoom_items" title="Show magnifying glass when mouse is hovered over images">
-      <label for="left_content_zoom">Zoom</label>
-      <input id="left_content_zoom" type="checkbox">
-      <div class="options">
-        <select name="zoom_level" id="zoom_level">
-          <option value="0.4">0.4X (shrink)</option>
-          <option value="0.8">0.8X (shrink)</option>
-          <option value="2.0" selected="selected">2X (magnify)</option>
-          <option value="3.0">3X (magnify)</option>
-          <option value="4.0">4X (magnify)</option>
-          <option value="8.0">8X (magnify)</option>
-        </select>
+    <div class="toolbar">
+      <div id="icon_home_div" onclick="_imcomp_set_panel('step1', true)">
+        <svg viewbox="0 0 24 24">
+          <use xlink:href="#icon_home"></use><title>Go to home page</title>
+        </svg>
+      </div>
+      <div id="icon_back_div" >
+        <svg viewbox="0 0 24 24">
+          <use xlink:href="#icon_back"></use><title>Go to previous page</title>
+        </svg>
+      </div>
+      <div id="icon_forward_div">
+        <svg viewbox="0 0 24 24">
+          <use xlink:href="#icon_forward"></use><title>Go to next page</title>
+        </svg>
+      </div>
+      <div id="icon_save_div">
+        <svg viewbox="0 0 24 24">
+          <use xlink:href="#icon_save"></use><title>Save current visualization</title>
+        </svg>
+      </div>
+      <div id="icon_zoomin_div">
+        <svg viewbox="0 0 24 24">
+          <use xlink:href="#icon_zoomin"></use><title>Magnifying glass to zoom in</title>
+        </svg>
       </div>
     </div>
   </div>
-  <div class="top_left"></div>
+  <div class="top_left_logo">
+    <a href="http://0.0.0.0:9972/imcomp/index.html" title="Image Comparator">ImComp</a>
+  </div>
 </div>
 
 <!-- content updated by imcomp.js -->
 <div id="step1_panel" class="panel_content step1_content_color">
-  <div class="step1_text">
+  <div id="step1_text" class="step1_text">
     <button id="add_images" type="button">Click here</button><span> to upload images <br/> or <br/> drag and drop images here</span>
   </div>
     <p id="step1_file_added_count"></p>
     <div id="step1_files_added_nav" class="display-none">
-      <button type="button" name="button" onclick="_imcomp_set_panel('step3', true)">Next</button>
+      <button type="button" name="button" title="Navigate to the files comparison page" onclick="_imcomp_set_panel('step3', true)">Next</button>
     </div>
-    <p>Note: Using this tool, you can compare any pair of images from the set of images that you upload here.</p>
+    <div class="step1_panel_note">
+      <p>Note: Using this tool, you can compare any pair of images from the set of images that you upload here.</p>
+    </div>
+
 </div>
 
 <!-- Panel to configure image comparison algorithm -->
@@ -69,7 +112,7 @@
       <option value="300">Toggle Speed: Medium</option>
       <option value="150">Toggle Speed: Fast</option>
     </select>
-    <select name="zoom_level" id="zoom_level" >
+    <select name="zoom_level" id="zoom_level" title="Level of magnification" >
       <option value="0.4">Zoom: 0.4X (shrink)</option>
       <option value="0.8">Zoom: 0.8X (shrink)</option>
       <option value="2.0">Zoom:   2X (magnify)</option>
@@ -87,13 +130,13 @@
   <div id="files_panel" title="All uploaded images"></div>
 
   <div id="results_tabs_panel">
-    <span id="results_tabs_default" class="results_tab">default</span>
-    <span id="results_tabs_overlay" class="results_tab">overlay</span>
-    <span id="results_tabs_diff" class="results_tab">difference</span>
-    <span id="results_tabs_toggle" class="results_tab">Toggle</span>
-    <span id="results_tabs_fade" class="results_tab">Fade</span>
-    <span id="results_tabs_slide" class="results_tab">Slide</span>
-    <span id="results_tabs_hover" class="results_tab">Hover</span>
+    <span id="results_tabs_default" class="results_tab" title="Toggle between the left and right images">default</span>
+    <span id="results_tabs_overlay" class="results_tab" title="Overlay of left image on top of the right image">overlay</span>
+    <span id="results_tabs_diff" class="results_tab" title="Difference between the left and right images">difference</span>
+    <span id="results_tabs_toggle" class="results_tab" title="Toggle between the left and right images at custom speed">Toggle</span>
+    <span id="results_tabs_fade" class="results_tab" title="Seamlessly transition from left image to right image">Fade</span>
+    <span id="results_tabs_slide" class="results_tab" title="Slide between the left and right images">Slide</span>
+    <span id="results_tabs_hover" class="results_tab" title="Hover the mouse over the image to switch between left and right images">Hover</span>
   </div>
 
   <!-- tools specific to the tabs above -->
@@ -258,15 +301,8 @@
     </div>
   </div> <!-- end of middle panel -->
 
-  <div id="results_save_panel">
-    <button id="results_home" type="button" onclick="_imcomp_set_panel('step1', true)">home</button>
-    <button id="results_back" type="button" onclick="_imcomp_set_panel('step3', true)">back</button>
-    <button id="save_result" type="button" onclick="">save</button>
-  </div>
-
   <div id="compare_panel" class="compare_panel">
-    <button id="compare_panel_back" type="button" onclick="_imcomp_set_panel('step1', true)">back</button>
-    <button id="compare_base_comp" type="button" >compare</button>
+    <button id="compare_base_comp" type="button" title="Compare the two chosen images">compare</button>
   </div>
 </div><!-- end of step 3 panel -->
 
