bug fix to show panel headers while navigating

--- a/asset/imcomp/index.html
+++ b/asset/imcomp/index.html
@@ -151,7 +151,7 @@
     </select>
   </div>
 
-  <div class="files_panel_header">
+  <div id="files_panel_header" class="files_panel_header">
     Files Panel
   </div>
   <div id="files_panel" title="All uploaded images"></div>
@@ -194,7 +194,7 @@
   </div>
 
   <!-- Content name, description and status -->
-  <div class="contents_panel_header">
+  <div id="contents_panel_header" class="contents_panel_header">
     View Panel
   </div>
   <div id="middle_panel" class="non_draggable" draggable="false">
