choose algorithms in the UI

--- a/asset/imcomp/index.html
+++ b/asset/imcomp/index.html
@@ -85,6 +85,14 @@
         </div>
       </div>
     </div>
+    <select id="trnasformation_select">
+    <option value="affine">Select a Transform</option>
+    <option value="identity">Identity</option>
+    <option value="translation">Translation</option>
+    <option value="affine">Affine</option>
+    <option value="tps">Thin Plate Spline</option>
+    <option value="projective">Projective</option>
+  </select>
     <div class="compare_panel">
       <button id="compare_base_comp" type="button" title="Compare the two chosen images">compare</button>
     </div>
